--- a/main.tex
+++ b/main.tex
@@ -57,41 +57,53 @@
 %\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{Verze s typograficky upravenými kapitolami - zbývají špatně zalomené řádky v bibliografii. Kapitoly z této verze budou zaslány autorům k finální autorizaci. Rovněž je třeba upravit přetéjkající tabulky \ref{tab:states} a \ref{paramtab} }}
 
 
-\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{Verze s typograficky upravenými kapitolami - zbývají špatně zalomené řádky v bibliografii. Kapitoly z této verze budou zaslány autorům k finální autorizaci.}}
+\title{Rok s pandemií covid-19 -- reflexe v poločase\footnote{Verze do které Milan zanáší korektrorské připomínky z Karolina.}}
 \author{Bisop}
 \maketitle
 
 
 %\subfile{prispevky/065-Nekolik_poznamek/main.tex}
-
+\setcounter{page}{5}
 \subfile{prispevky/000-uvod/main.tex}
 
 
 \part{Východiska, metody, modely}
 
 \subfile{prispevky/010-Co_se_vi/main.tex}
+% nize zamezi zobrazovani cehokoli na sude strance pred novou kapitolou
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/060-Typy_modelu/main.tex}
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/160-Agentni_modely/main.tex}
 \subfile{prispevky/070-Ucinnost_ockovani/main.tex}
+% Tady problem!!! prazdna stranka se radi spatne pred obrazky, tak zakomentovano
+%\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/030-Co_na_cem_zavisi/main.tex}
 
 \part{Pandemie, data a evidence}
 
 \subfile{prispevky/050-Grafy_kontaktu/main.tex}
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/090-Evaluace_politik/main.tex}
 \subfile{prispevky/100-Skoly/main.tex}
 \subfile{prispevky/040-Prirozene_experimenty/main.tex}
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/080-Logistika_ockovani/main.tex}
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/120-Trasovani/main.tex}
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/130-Compliance/main.tex}
 
 \subfile{prispevky/150-Zmeny_chovani/main.tex}
 
-\part{Dopady, zhodnocení a výhledy}
+\part{Dopady, zhodnocení a~výhledy}
 
 \subfile{prispevky/065-Nekolik_poznamek/main.tex}
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/110-Ekonomicke_aspekty/main.tex}
+\newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/085-Nove_vyzvy/main.tex}
+\newpage \thispagestyle{empty} \mbox{} \newpage
 % Role vědy 
 
 
