--- a/prispevky/040-Prirozene_experimenty/main.tex
+++ b/prispevky/040-Prirozene_experimenty/main.tex
@@ -7,7 +7,7 @@
 \section*{Úvod}
 Chceme-li zkoumat vliv jednotlivých nefarmaceutických opatření (jako je např. otev\-ře\-ní či uzavření škol) na vývoj epidemie, narážíme vždy na stejný problém, a sice na nemožnost zorganizovat náhodný experiment s~kontrolní skupinou. 
 
-Smyslem režimových opatření je řízení epidemie. Je třeba je regionálně přijímat dle vývoje epidemie -- zpřísňovat je v~zasažených oblastech a uvolňovat v~částech země, kde epidemie opadá. V~žádném případě tedy nelze režimová opatření v~jednotlivých oblastech zavádět náhodně, tedy tak, jak organizujeme běžné experimenty. Není to prvotně problém technický či organizační, jistě bychom mohli pro každý okres ČR provést hod mincí a v~případě, padne-li panna, v~daném okrese např. zavřít obchody (padl-li by orel, obchody by zůstaly otevřené). Odhlédneme-li od reálných limit takového experimentu (mezi které patří např. pohyb obyvatel mezi jednotlivými oblastmi) i od morálních aspektů takového experimentu (těžko bychom hledali etickou komisi, která by takový experiment schválila), provedení takového experimentu je v~přímém rozporu s~podstatou právního státu. Je vyloučeno, aby soudní moc libovolného právního státu schválila omezení práv svých občanů na základě hodu mincí.
+Smyslem režimových opatření je řízení epidemie. Je třeba je regionálně přijímat dle vývoje epidemie -- zpřísňovat v~zasažených oblastech a uvolňovat v~částech země, kde epidemie opadá. V~žádném případě tedy nelze režimová opatření v~jednotlivých oblastech zavádět náhodně, tedy tak, jak organizujeme běžné experimenty. Není to prvotně problém technický či organizační, jistě bychom mohli pro každý okres ČR provést hod mincí, a jestliže padne panna, v~daném okrese např. zavřít obchody (kdyby padl orel, obchody by zůstaly otevřené). Odhlédneme-li od reálných limit takového experimentu (mezi které patří např. pohyb obyvatel mezi jednotlivými oblastmi) i od morálních aspektů takového experimentu (těžko bychom hledali etickou komisi, která by takový experiment schválila), provedení takového experimentu je v~přímém rozporu s~podstatou právního státu. Je vyloučeno, aby soudní moc libovolného právního státu schválila omezení práv svých občanů na základě hodu mincí.
 
 Naštěstí existují experimenty přirozené, tedy takové, v~nichž je země rozdělena náhodně, nezávisle na průběhu epidemie, a sice na základě pravidel, která byla schválena v~jiném historickém kontextu. Takovým přirozeným experimentem bylo v~České republice 2. kolo voleb do Senátu Parlamentu České republiky. Zatímco první kolo senátních voleb proběhlo společně s~volbami do krajských zastupitelstev (kromě několika pražských senátních obvodů tedy volila celá Česká republika), druhé kolo proběhlo pouze ve 26 z~81 senátních obvodů. (Každé dva roky je volena třetina, tedy 27 senátorů, nicméně senátor Zbyněk Linhart byl na podzim 2020 zvolen v~obvodě č. 33 -- Děčín již v~prvním kole). Rozdělení obvodů na jednotlivé třetiny 
 %(viz. obr. 
@@ -26,11 +26,11 @@ Druhé kolo senátních voleb se tak \uv{shodou okolností} stalo přirozeným e
 
 Náš pokus o~odhad vlivu voleb na vývoj epidemie covid-19 samozřejmě není první, tímto tématem se zabývali vědci v~mnoha zemích. Nejstarší články, které zkoumaly vliv voleb na růst nových infekcí a mortalitu \cite{Berry2020, feltham2020no, AJPH2020}, nepotvrdily obavy, že by volby přispívaly k~růstu epidemie covid-19. Otázkou však zůstává, do jaké míry jsou realistické modely, které v~daných článcích odhadují vývoj epidemie v~hypotetickém případě neuskutečnění voleb. Dalším problémem je relativní homogenita volební účasti ve všech studovaných případech. Na druhou stranu, 
 \cite{bertoli_france}, \cite{cotti2020relationship} i \cite{Cassan2020} 
-ukazují, v~ostrém protikladu k~výše citovaným studiím, že volby signifikantně zrychlují růst epidemie. Tyto rozporuplné výsledky jsou dalším důvodem, proč studovat vliv voleb pomocí přirozeného experimentu, v~němž není třeba hypotetický svět \uv{bez voleb} modelovat, neboť tento svět v~dané zemi (ve smyslu kontrolní skupiny) existuje.\footnote{Podobně debata probíhá i v~případě dalších událostí s~politickým pozadím, jako jsou např. velká volební setkání. Např. \cite{dave2020risk} používají umělou kontrolní skupinu, s~jejíž pomocí ukazují, že široce kritizovaná Trumpova setkání s~voliči v~Tulse a Oklahomě nejspíše nezpůsobila zásadní růst nových případů covid-19 ani růst mortality. Na druhou stranu  \cite{bernheim2020effects} agregují 18 Trumpových volebních setkání a odhadují, že tato setkání způsobila 30 tisíc případů covid-19 a přibližně 700 úmrtí.  \cite{bernheim2020effects} ukazují dále, že vliv jednotlivých setkání je velice různorodý a analýzu setkání jediného, jako bylo třeba to v~Tulse, není možno považovat za reprezentativní}
+ukazují, v~ostrém protikladu k~výše citovaným studiím, že volby signifikantně zrychlují růst epidemie. Tyto rozporuplné výsledky jsou dalším důvodem, proč studovat vliv voleb pomocí přirozeného experimentu, v~němž není třeba hypotetický svět \uv{bez voleb} modelovat, neboť tento svět v~dané zemi (ve smyslu kontrolní skupiny) existuje.\footnote{Podobná debata probíhá i v~případě dalších událostí s~politickým pozadím, jako jsou např. velká volební setkání. \cite{dave2020risk} používají umělou kontrolní skupinu, s~jejíž pomocí ukazují, že široce kritizovaná Trumpova setkání s~voliči v~Tulse a Oklahomě nejspíše nezpůsobila zásadní růst nových případů covid-19 ani růst mortality. Na druhou stranu  \cite{bernheim2020effects} agregují 18 Trumpových volebních setkání a odhadují, že tato setkání způsobila 30 tisíc případů covid-19 a přibližně 700 úmrtí. Dále  \cite{bernheim2020effects} ukazují, že vliv jednotlivých setkání je velice různorodý a analýzu jednoho setkání, jako bylo nap59klad to v~Tulse, není možno považovat za reprezentativní.}
 
 
 \section*{Metodologie}
-Je zřejmé, že k~zodpovězení naší výzkumné otázky potřebujeme model, který by (i) porovnal průběh epidemie ve volebních a nevolebních obvodech před druhým kolem senátních voleb a (ii) odhadl {\it volební efekt} jako rozdíl v~povolební dynamice vývoje epidemie.
+Je zřejmé, že k~zodpovězení naší výzkumné otázky potřebujeme model, který by (i)~porovnal průběh epidemie ve volebních a nevolebních obvodech před druhým kolem senátních voleb a (ii) odhadl {\it volební efekt} jako rozdíl v~povolební dynamice vývoje epidemie.
 
 Pokud by byla nákaza pozorovatelná okamžitě u~všech nakažených (perfect monitoring), viděli bychom rozdíl mezi volebními a nevolebními okrsky okamžitě v~den voleb. Skutečnost je ovšem samozřejmě jiná, nákazy vidíme s~odstupem, který navíc není pevně daný, a to jak kvůli rozdílné inkubační době mezi jedinci, tak kvůli různému časovému odstupu testování. Pozorovaný rozdíl v~incidenci tak nemůže být jednorázový, nicméně jde o~poměrně krátkou periodu. Ve chvíli, kdy se mezi detekovanými přestanou objevovat ti, kteří se nakazili ve volební den (ať už ve volebním či nevolebním obvodu), růst epidemie ve volebních a nevolebních obvodech se opět vyrovná (jakkoli růst epidemie ve volebních obvodech bude pravděpodobně z~jiného základu). V~případě, že jisté, dané procento nakažených bude potřebovat nemocniční péči, bychom ve volebních obvodech měli pozorovat jiný (vyšší) růst počtu hospitalizovaných.  
 
@@ -46,7 +46,7 @@ Formálně modelujeme růst pandemie následovně
 \end{equation}
 
 Základní proměnné, které chceme vysvětlit, jsou relativní růsty za $n$ dní, a to růst prevalence $P$ v~rovnici (\ref{eq:event_study}) a růst počtu hospitalizovaných v~rovnici (\ref{eq:event_study2}), které pozorujeme v~obci $m$ (v~případě prevalencí), či v~obci s~rozšířenou působností $r$ (v~případě hospitalizací) v~den $t; \beta$ a $\Gamma$ jsou odhadované koeficienty.\footnote{$n$ položíme rovno 14 dnům, takže zkoumaná perioda růstu obsahuje
-(i) bezpříznakovou inkubační dobu\cite{lauer_et_al2020}, (ii) čas potřebný pro rezervaci testu, test samotný a jeho vyhodnocení (iii) případnou hospitalizaci. Abychom ověřili robustnost studie, budeme pracovat i se sedmidenním růstem incidence, který též vyrovnává kolísání v~rámci týdne.}
+(i) bezpříznakovou inkubační dobu\cite{lauer_et_al2020}, (ii) čas potřebný pro rezervaci testu, test samotný a jeho vyhodnocení, (iii) případnou hospitalizaci. Abychom ověřili robustnost studie, budeme pracovat i se sedmidenním růstem incidence, který též vyrovnává kolísání v~rámci týdne.}
 
 
 V~rovnici~(\ref{eq:event_study}) jsou předmětem našeho zájmu proměnné, které získáme jako součin binárního indikátoru udávajícího, zda se v~dané oblasti v~roce 2020 volby konaly, a dummy proměnné pro jednotlivé dny $j$, kde $j$ nabývá hodnot od $-J$ do $K$. 
@@ -56,10 +56,10 @@ Dobu před volbami zkoumáme pro $J=28$ dní, což je doba dostatečně dlouhá 
 V~regresi nemocničních případů~(\ref{eq:event_study2}) jsou našimi zkoumanými proměnnými sou\-či\-ny podílu počtu obyvatel daného ORP ve volební oblasti a opět dummy proměnné pro jednotlivé dny $j$, kde $j$ nabývá hodnot od $-J$ do $K$.\footnote{Ve třech největších městech -- v~Praze, Brně a Ostravě -- uvažujeme o~všech obyvatelích jako o~těch, kteří žijí ve volebním obvodu, neboť \textit{de facto} tvoří jedinou obec provázanou mnoha vazbami. Naše analýza je nicméně robustní ve smyslu, že stejné výsledky dostáváme i v~případě, že také v~těchto městech bereme počet obyvatel ve volebním okrsku úměrný části voličů, která je ve skutečnosti oprávněna volit.} Důvod tohoto postupu je prostý -- některá ORP jsou rozdělena mezi jednotlivé senátní obvody, takže se může stát, že některá obec v~rámci stejného ORP \uv{volí} a některá ne. Dále model obsahuje fixní efekt pro každou obci $\lambda_{r}$ a fixní efekt pro každý den $\lambda_{t}$, stejně jako v~předešlé rovnici. Chybový člen značíme $\varepsilon_{r,t}$.
 
 \subsection*{Data}
-\paragraph{Epidemiologická data.}  Veřejná data Ministerstva zdravotnictví ČR a Ústavu pro zdravotnické informace a statistiku (ÚZIS) popisují epidemiologickou situaci ve všech 6259 obcích České republiky. Pro každou obec udávají denní počet nových detekovaných případů, a to jak celkem, tak separátně v~kategorii nad 65 let. Dále tato data obsahují informace o~hospitalizovaných a pozitivitě PCR testů separátně pro všech 206 obcí s~rozšířenou působností (ORP). 
+\paragraph{Epidemiologická data.}  Veřejná data Ministerstva zdravotnictví ČR a Ústavu pro zdravotnické informace a statistiku (ÚZIS) popisují epidemiologickou situaci ve všech 6259 obcích České republiky. Pro každou obec udávají denní počet nových detekovaných případů, a to jak celkem, tak separátně v~kategorii nad 65 let. Dále tato data obsahují informace o~hospitalizovaných a o~pozitivitě PCR testů separátně pro všech 206 obcí s~rozšířenou působností (ORP). 
 
 \paragraph{Sociodemografická data.} 
-Pokud rozdělujeme populaci ve volebních a ne\-vo\-leb\-ních obvodech podle věku či jiných sociodemografických hledisek, pak používáme data ze Sčítání lidu v~roce 2011. Veřejně přístupná data jsou Českým statistickým úřadem (ČSÚ) poskytována na úrovni obcí.
+Pokud rozdělujeme populaci ve volebních a ne\-vo\-leb\-ních obvodech podle věku či jiných sociodemografických hledisek, používáme data ze Sčítání lidu v~roce 2011. Veřejně přístupná data jsou Českým statistickým úřadem (ČSÚ) poskytována na úrovni obcí.
 
 \section*{Výsledky}
 Nejprve porovnejme růst nových případů ve volebních a nevolebních okrscích. Na panelu A~obrázku \ref{fig:Covid_growth14}  jsou znázorněny průměrné čtrnáctidenní přírůstky ve volebních a nevolebních obvodech v~průběhu druhého kola senátních voleb na podzim 2020. Zatímco vývoj epidemie v~časovém úseku před 2. kolem senátních voleb
@@ -80,7 +80,7 @@ Tuto skutečnost potvrzuje i vývoj hospitalizací, jak je znázorňuje obrázek
 \begin{figure}[ht]    
     \centering
     \includegraphics[scale=1]{Hospitalization_growth14.pdf}
-    \caption{Volby a jejich vliv na růst hospitalizací. (Stejný princip jako Panel B na předešlém obrázku -- svislá osa představuje rozdíl mezi růstem hospitalizací ve volebních a nevolebních obvodech v procentech)}
+    \caption{Volby a jejich vliv na růst hospitalizací. (Stejný princip jako Panel B na předešlém obrázku -- svislá osa představuje rozdíl mezi růstem hospitalizací ve volebních a nevolebních obvodech v procentech.)}
      \label{fig:hospit_growth}
 \end{figure}
 
@@ -89,9 +89,9 @@ Vliv 2. kola senátních voleb na vývoj epidemie v~ČR byl dramatický. Je to v
 
 Vidíme, že signifikantní rozdíl mezi volebními a nevolebními obvody v~případě občanů starších 65 let vymizí. To je ovšem pouze částečně dobrá zpráva. Starší občané se sice úspěšně chrání tak, aby nebyli nakaženi v~průběhu volebního dne, nicméně cena, kterou za to všichni platíme z~pohledu reprezentativnosti demokratických voleb, je poměrně vysoká. 
 
-Srovnáme-li krajské volby v~roce 2016 s~krajskými volbami 2020 (které proběhly společně s~1. kolem senátních voleb 2020, tedy také v~průběhu epidemie), vidíme velmi odlišnou účast voličů nad 65 let. Samozřejmě, z~principu tajných demokratických voleb nevíme přesně, kolik starších voličů se jednotlivých voleb zúčastnilo. Nicméně můžeme studovat závislost volební účasti v~jednotlivých volebních okrscích na podílu obyvatel starších 65 let. Skutečnost je taková, že v~krajských volbách v~roce 2016 každý 1 procentní bod podílu občanů starších 65 let zvyšoval volební účast o~0,511 procentního bodu (obecně se tedy občané nad 65 let účastnili v~krajských volbách velice nadprůměrně). Koeficient udávající vyšší volební účast v~okrscích s~vyšším počtem občanů nad 65 let klesl v~krajských volbách 2020 v~porovnání s~krajskými volbami 2016 na čtvrtinu a přestal být signifikantní.
+Srovnáme-li krajské volby v~roce 2016 s~krajskými volbami 2020 (které proběhly společně s~1. kolem senátních voleb 2020, tedy také v~průběhu epidemie), vidíme velmi odlišnou účast voličů nad 65 let. Samozřejmě, z~principu tajných demokratických voleb nevíme přesně, kolik starších voličů se jednotlivých voleb zúčastnilo. Nicméně můžeme studovat závislost volební účasti v~jednotlivých volebních okrscích na podílu obyvatel starších 65 let. Skutečnost je taková, že v~krajských volbách v~roce 2016 jeden každý 1 procentní bod podílu občanů starších 65 let zvyšoval volební účast o~0,511 procentního bodu (obecně se tedy občané nad 65 let účastnili v~krajských volbách velice nadprůměrně). Koeficient udávající vyšší volební účast v~okrscích s~vyšším počtem občanů nad 65 let klesl v~krajských volbách 2020 v~porovnání s~krajskými volbami 2016 na čtvrtinu a přestal být signifikantní.
 
-Volby s~osobní účastí v~průběhu pandemie tak nejsou jen nebezpečné ve smyslu zrychlení dynamiky pandemie. Jejich problém spočívá i v~tom, že vzhledem k~růz\-né\-mu nebezpečí nemoci covid-19 pro různé věkové skupiny nám volby v~průběhu pandemie nedávají skutečný obraz voličských preferencí tak, jak by byly zaznamenány v~dobách před epidemií. Hlas vyšších věkových skupin je proti předpandemické situaci slabší. V~tomto smyslu představuje pandemie další ohrožení demokracie. Tím totiž není jen přímé ohrožení životů jednotlivých občanů, ale i nepřímý vliv na zastoupení jejich hlasu v~demokratických volbách.
+Nejenže jsou tak volby s osobní účastí v průběhu pandemie nebezpečné ve smyslu zrychlení dynamiky pandemie, ejich problém spočívá i v~tom, že vzhledem k~růz\-né\-mu nebezpečí nemoci covid-19 pro různé věkové skupiny nám volby v~průběhu pandemie nedávají skutečný obraz voličských preferencí tak, jak by byly zaznamenány v~dobách před epidemií. Hlas vyšších věkových skupin je proti předpandemické situaci slabší. V~tomto smyslu představuje pandemie další ohrožení demokracie. Tím je totiž nejen přímé ohrožení životů jednotlivých občanů, ale i nepřímý vliv na zastoupení jejich hlasu v~demokratických volbách.
 
   
 \begin{figure}[ht]
