--- a/prispevky/100-Skoly/main.tex
+++ b/prispevky/100-Skoly/main.tex
@@ -7,9 +7,9 @@
 
 \section*{Úvod\footnote{Tato kapitola vychází z~modelu, který autoři vypracovali v~souvislosti s~nastavováním režimových opatření v~českých školách. Kompletní výsledky modelu jsou shrnuty v~článku, o~jehož publikaci autoři usilují v~zahraničních epidemiologických časopisech, částečné výsledky byly rovněž shrnuty ve výzkumné zprávě na webu BISOP (BISOP 2021, \url{https://www.bisop.eu/vyzkumna-zpravabisop-vytvoril-model-sireni-covidu-19-na-zakladnich-skolach/}).}}
 
-Podobně jako jiné infekční choroby se i covid-19 šíří prostřednictvím relevantních kontaktů mezi lidmi, při nichž dochází k~přenosu viru \cite{pg:kucharski2020, vespignani2020modelling}. To se může dít v~mnoha prostředích lidské aktivity od rodin přes nákupy až po pracoviště. Jedním z~takových prostředí, kde se covid-19 a také další respirační onemocnění šíří, jsou školy. Uzavírání škol patřilo po celém světě mezi první protiepidemická opatření ve snaze co nejrychleji a nejefektivněji zamezit prudkému nárůstu počtu nově nakažených jedinců v~celé populaci. Od poloviny března roku 2020 tak školy v~České republice fungovaly v~různou měrou omezeném režimu a i v~květnu 2021 stále trvají některá omezení výuky.
+Podobně jako jiné infekční choroby se i covid-19 šíří prostřednictvím relevantních kontaktů mezi lidmi, při nichž dochází k~přenosu viru \cite{pg:kucharski2020, vespignani2020modelling}. To se může dít v~mnoha prostředích lidské aktivity od rodin přes nákupy až po pracoviště. Jedním z~takových prostředí, kde se covid-19 a také další respirační onemocnění šíří, jsou školy. Uzavírání škol patřilo po celém světě mezi první protiepidemická opatření ve snaze co nejrychleji a nejefektivněji zamezit prudkému nárůstu počtu nově nakažených jedinců v~celé populaci. Od poloviny března roku 2020 tak školy v~České republice fungovaly v~různou měrou omezeném režimu a i v~květnu 2021 stále trvala některá omezení výuky.
 
-Přes určitou míru nejistoty panuje mezi vědci konsenzus v~tom, že školy patří mezi prostředí, v~nichž je riziko nákazy a následného přenosu mimo ni relativně vysoké a že uzavírání škol patří mezi jedno z~nejefektivnějších opatření pro omezení šíření onemocnění covid-19 \cite{Brauner_etal2020, lessler2021household, Haug_etal2020}. Dlouhodobé uzavření škol má však i významné negativní dopady na žáky a studenty i učitele. Mezi tyto negativní dopady patří nízká efektivita distanční výuky s~ohledem na vzdělávací výsledky dětí \cite{engzell2021learning}, ale také psychické a sociální dopady způsobené nedostatkem interakcí s~vrstevníky \cite{bignardi2020longitudinal, ravens2021impact} a v~rovině ekonomické pak také náklady plynoucí z~toho, že rodiče namísto práce zůstávají doma s~dětmi. Někteří odborníci dokonce upozorňují, že dlouhodobé dopady uzavření škol mohou navíc disproporčně více dopadnout na děti ze sociálně znevýhodněných rodin \cite{di2020likely}.
+Přes určitou míru nejistoty panuje mezi vědci konsenzus v~tom, že školy patří mezi prostředí, v~nichž je riziko nákazy a následného přenosu mimo ni relativně vysoké a že uzavírání škol patří mezi jedno z~nejefektivnějších opatření pro omezení šíření onemocnění covid-19 \cite{Brauner_etal2020, lessler2021household, Haug_etal2020}. Dlouhodobé uzavření škol má však i významné negativní dopady na žáky a studenty i učitele. Mezi tyto negativní dopady patří nízká efektivita distanční výuky s~ohledem na vzdělávací výsledky dětí \cite{engzell2021learning}, ale také psychické a sociální dopady způsobené nedostatkem interakcí s~vrstevníky \cite{bignardi2020longitudinal, ravens2021impact} a v~rovině ekonomické pak také náklady plynoucí z~toho, že rodiče namísto práce zůstávají doma s~dětmi. Někteří odborníci upozorňují dokonce na to, že dlouhodobé dopady uzavření škol mohou navíc disproporčně více dopadnout na děti ze sociálně znevýhodněných rodin \cite{di2020likely}.
 
 Zmírnění epidemie za cenu omezení vzdělávacích a socializačních funkcí škol tak představuje určité dilema, s~nímž se potýká veškeré uvažování o~tom, za jakých podmínek školy uzavírat či znovuotevírat během pandemie. Modelování a simulace založené na datech představují v~tomto ohledu možnost, jak toto dilema alespoň částečně vyřešit \cite{squazzoni2020computational}, neboť alternativy v~podobě observačních dat buď nejsou dostupné, nebo jsou v~případě experimentů krajně neetické. Modely pro šíření infekčních chorob tak lze chápat jako jakousi „virtuální laboratoř“ \cite{Rao_etal2021}, v~níž lze zkoumat efekty různých opatření a různých vlastností daného patogenu na rychlost a rozsah výsledné epidemie.
 
@@ -21,9 +21,9 @@ Pro smysluplné modelování potenciálního průběhu epidemie covid-19 na ško
 
 Typickou školu si lze v~tomto ohledu představit jako tzv. víceúrovňovou ví\-ce\-vrst\-vou síť či graf, v~níž figurují dvě úrovně uzlů (bodů v~obrázcích 1 a 2) reprezentující dvě hlavní skupiny jedinců uvnitř školy – učitele a žáky. Mezi učiteli i mezi žáky probíhají pro přenos nákazy potenciálně rizikové kontakty znázorněné jako vazby (spojnice mezi uzly v~obrázcích 1 a 2). Obrázek 1 zobrazuje všechny učitele a vazby mezi nimi. Vazby relevantní pro přenos viru SARS-CoV-2 mezi učiteli jsou trojího typu: kontakty v~kabinetu, v~práci mimo kabinet a mimo práci, resp. školu. Obrázek 2 potom zobrazuje všechny žáky a vazby mezi nimi, kterých lze rozlišit celkem pět typů vzhledem k~možnosti přenosu viru SARS-CoV-2. Jde o~kontakty v~lavici, při obědě, během přestávky, ve školní družině a mimo školu. Učitelé a žáci jsou vzájemně propojeni prostřednictvím vazeb výuky, kde má každý učitel vazbu na všechny žáky, které vyučuje, o~intenzitě odpovídající počtu vyučovaných hodin a počtu žáků v~dané třídě (tato úroveň zde není zobrazena).
 
-Empirická data, která by umožnila sestavit takovouto víceúrovňovou vícevrstvou síť, lze získat v~zásadě třemi způsoby. Jde o~pozorování, simulaci a dotazování. Pozorování v~tomto kontextu znamená jakýkoli způsob, který umožní externím výzkumníkům zjistit, kdo je s~kým v~rámci zkoumané školy v~kontaktu. Jedním ze způsobů, jak takové pozorování provést, je pomocí nositelných snímačů, které dostanou všichni sledovaní aktéři, aby je po dobu pozorování nosili (viz např. \cite{stehle2011high, gemmetto2014mitigation}. Tyto senzory elektronicky zaznamenávají, zda a jak dlouho jsou v~předem určené blízkosti k~ostatním senzorům, tj. jejich nositelům. Výhodami tohoto typu sběru dat jsou přesnost a relativní objektivita takto získaných dat, protože u~tohoto způsobu sběru dat lze flexibilně nastavit měření různé délky a vzdálenosti kontaktů a netřeba při tom spoléhat na subjektivní vnímání zkoumaných osob. Nevýhodami pozorovacích technik naopak jsou jejich technické, finanční a časové nároky. Simulace realistických dat na základě známých parametrů a charakteristik odpovídajících sítím, které jsou předmětem zájmu, představuje alternativu, kterou lze také za určitých podmínek použít (viz např. \cite{mcgee2021model, potter2012estimating}. Simulace dat nahrazuje jejich sběr, takže odpadají komplikace spojené s~logistickými a finančními nároky sběru dat. To má ale svou cenu v~tom, že validita nasimulovaných dat předpokládá dostatečné znalosti o~struktuře a dynamice daných sítí, které ne vždy mohou být k~dispozici nebo zachycovat všechny podstatné rysy simulovaných sítí.
+Empirická data, která by umožnila sestavit takovouto víceúrovňovou vícevrstvou síť, lze získat v~zásadě třemi způsoby. Jde o~pozorování, simulaci a dotazování. Pozorování v~tomto kontextu znamená jakýkoli způsob, který umožní externím výzkumníkům zjistit, kdo je s~kým v~rámci zkoumané školy v~kontaktu. Jedním ze způsobů, jak takové pozorování provést, je pomocí nositelných snímačů, které dostanou všichni sledovaní aktéři, aby je po dobu pozorování nosili (viz např. \cite{stehle2011high, gemmetto2014mitigation}. Tyto senzory elektronicky zaznamenávají, zda a jak dlouho jsou v~předem určené blízkosti k~ostatním senzorům, tj. jejich nositelům. Výhodami tohoto typu sběru dat jsou přesnost a relativní objektivita takto získaných dat, protože u~tohoto způsobu sběru dat lze flexibilně nastavit měření různé délky a vzdálenosti kontaktů a netřeba při tom spoléhat na subjektivní vnímání zkoumaných osob. Nevýhodami pozorovacích technik jsou naopak jejich technické, finanční a časové nároky. Simulace realistických dat na základě známých parametrů a charakteristik odpovídajících sítím, které jsou předmětem zájmu, představuje alternativu, kterou lze také za určitých podmínek použít (viz např. \cite{mcgee2021model, potter2012estimating}. Simulace dat nahrazuje jejich sběr, takže odpadají komplikace spojené s~logistickými a finančními nároky sběru dat. To má ale svou cenu v~tom, že validita nasimulovaných dat předpokládá dostatečné znalosti o~struktuře a dynamice daných sítí, které ne vždy mohou být k~dispozici nebo zachycovat všechny podstatné rysy simulovaných sítí.
 
-Posledním způsobem, jak potřebná data získat, je dotazování, z~nějž vycházejí i výsledky ve zbytku této kapitoly. Dotazování představuje pomyslný standard pro sběr dat o~lidském chování včetně chování spojeného se zdravím (srv. \cite{danon2011networks, luke2007network, zaj:mossong2008social}. Dobře zkonstruovaný dotazník dokáže získat spolehlivé informace i o~velice specifických aspektech chování respondentů. Je nicméně třeba mít na paměti riziko nepřesných odpovědí či neochoty respondentů odpovídat. To vzniká zvláště v~případě kognitivně náročných úkonů, mezi něž patří i odpovídání na otázky týkající se typů a četnosti kontaktů a toho, s~kým k~těmto kontaktům došlo. I~proto byl navržený dotazník nakonec maximálně úsporný a dotazoval se pouze na nezbytně nutné otázky. Aby byla zmapována celá vybraná škola, dotazováni byli všichni učitelé a všichni žáci. Žáci byli dotazováni na kontakty pěti typů (kontakty v~lavici, při obědě, během přestávky, ve školní družině a mimo školu) se spolužáky ve své třídě, ale také měli možnost indikovat kontakty s~žáky z~jiných tříd. Podobně učitelé odpovídali na otázky o~kontaktech s~ostatními učiteli ve třech situacích (v~kabinetu, mimo kabinet ve škole a mimo školu). Pomocí dotazování se také zjistilo, ve kterých třídách jednotliví učitelé vyučují a jak často. Pro usnadnění odpovídání byl respondentům v~rámci dotazníku vždy předložen seznam všech dalších žáků (resp. učitelů), v~němž měli možnost zvolit, s~kým měli daný kontakt. Intenzita kontaktu byla posuzována na čtyřbodové škále sahající od „vůbec“ až po „několikrát denně“.
+Posledním způsobem, jak potřebná data získat, je dotazování, z~nějž vycházejí i výsledky ve zbytku této kapitoly. Dotazování představuje pomyslný standard pro sběr dat o~lidském chování včetně chování spojeného se zdravím (srv. \cite{danon2011networks, luke2007network, zaj:mossong2008social}. Dobře zkonstruovaný dotazník dokáže získat spolehlivé informace i o~velice specifických aspektech chování respondentů. Nicméně je třeba mít na paměti riziko nepřesných odpovědí či neochoty respondentů odpovídat. To vzniká zvláště v~případě kognitivně náročných úkonů, mezi něž patří i odpovídání na otázky týkající se typů a četnosti kontaktů a toho, s~kým k~těmto kontaktům došlo. I~proto byl navržený dotazník nakonec maximálně úsporný a dotazoval se pouze na nezbytně nutné otázky. Aby byla zmapována celá vybraná škola, dotazováni byli všichni učitelé a všichni žáci. Žáci byli dotazováni na kontakty pěti typů (kontakty v~lavici, při obědě, během přestávky, ve školní družině a mimo školu) se spolužáky ve své třídě, ale měli také možnost indikovat kontakty s~žáky z~jiných tříd. Podobně učitelé odpovídali na otázky o~kontaktech s~ostatními učiteli ve třech situacích (v~kabinetu, mimo kabinet ve škole a mimo školu). Pomocí dotazování se také zjistilo, ve kterých třídách jednotliví učitelé vyučují a jak často. Pro usnadnění odpovídání byl respondentům v~rámci dotazníku vždy předložen seznam všech dalších žáků (resp. učitelů), v~němž měli možnost zvolit, s~kým měli daný kontakt. Intenzita kontaktu byla posuzována na čtyřbodové škále sahající od „vůbec“ až po „několikrát denně“.
 
 
 \section*{Popis sítě} 
@@ -53,7 +53,7 @@ Tato opatření se mohou zakládat na dostupné teorii, praktické potřebě a m
 
 \begin{table}
     \centering
-    \caption{Struktura sítě kontaktů mezi učiteli}
+    \caption{Struktura sítě kontaktů mezi učiteli.}
 \begin{tabular}{lccc}
 \hline
                  & \multicolumn{3}{c}{vrstva}                                                                      \\ 
@@ -73,7 +73,7 @@ Co se struktury kontaktů mezi učiteli týče, pozoruhodné jsou dva aspekty. J
 
 \begin{table}
     \centering
-    \caption{Struktura sítě kontaktů mezi žáky}
+    \caption{Struktura sítě kontaktů mezi žáky.}
 \begin{tabular}{lccccc}
 \hline
                  & \multicolumn{5}{c}{vrstva}                                                                                                                           \\ 
@@ -94,7 +94,7 @@ Struktura kontaktů mezi žáky se v~lecčems liší od struktury kontaktů mezi
 Kombinace propojenosti obou úrovní kontaktů, centralizace úrovně kontaktů mezi učiteli a zároveň jejich pozice propojující obě úrovně prostřednictvím vyučování v~různých třídách vystavuje učitele riziku nakažení a zároveň také rychlého přenosu nákazy. 
 
     
-\section*{Simulace opatření} 
+\section*{Simulace opatření.} 
 
 \begin{table}
     \centering
@@ -114,13 +114,13 @@ vše zavřeno            & 0       & 0       & 0      & 0      \\ \hline
 
 Výsledky simulací jsou shrnuty v~tabulce 3. Ze tří simulovaných opatření vychází jako jednoznačně nejefektivnější rotace celých tříd po týdnech. Riziko šíření covid-19 bez dalších zvažovaných opatření by tak mělo na základní škole klesnout o~75--80\,\%. Efektivita tohoto opatření je o~to větší, že není citlivá na míru dodržování tak jako ostatní režimová opatření (např. větrání nebo ochrana nosu a úst). Další výhodou rotace tříd proti jiným opatřením je relativně menší zásah do organizace a provozu školy: nevyžaduje významné úpravy rozvrhu a změn pro vyučující, podobně jako například půlení tříd.
 
-Relativně méně efektivními opatřeními, snižujícími riziko šíření covid-19 o~25--40\,\%, jsou omezení obědů a homogenizace třídních kolektivů. Homogenizace tříd zároveň zasahuje významným způsobem do provozu školy, zvláště na 2. stupni. Vyžaduje totiž významné změny rozvrhu (např. odlišnou organizaci jazykových tříd). Omezení obědů znamená významnou komplikaci pro velkou část dětí s~ohledem na jejich stravovací návyky a potřeby, především pro děti ze sociálně znevýhodněného prostředí.
+Relativně méně efektivními opatřeními, snižujícími riziko šíření covid-19 o~25--40\,\%, jsou omezení obědů a homogenizace třídních kolektivů. Homogenizace tříd zároveň významným způsobem zasahuje do provozu školy, zvláště na 2. stupni. Vyžaduje totiž značné změny rozvrhu (např. odlišnou organizaci jazykových tříd). Omezení obědů znamená velkou komplikaci pro velkou část dětí s~ohledem na jejich stravovací návyky a potřeby, především pro děti ze sociálně znevýhodněného prostředí.
 
 
 \section*{Diskuse} 
 Kontaktní sítě v~námi studované škole i simulace šíření viru SARS-CoV-2 v~této síti společně poukazují na to, jak jsou strukturní vlastnosti dané sítě důležité pro rozsah epidemie. Deskriptivní výsledky ukazují, že především síť kontaktů mezi učiteli je náchylná k~rychlému šíření nákazy, protože je hustě propojená a centralizovaná. Nejúčinnějším opatřením je rotace celých tříd. Rotace je efektivní, protože významně omezuje strukturu kontaktů a zároveň „karanténuje“ tu část žáků, která do školy v~daném týdnu nechodí. Ačkoli by se mohlo na první pohled zdát, že docházkou pouze poloviny žáků se infekce sníží o~polovinu, efekt je ve skutečnosti výrazně vyšší. Důvodem je to, že se ze sítě kontaktů načas odejme nejen polovina žáků, ale především jejich kontakty, jejichž proporce je vyšší než polovina, a to navíc v~hustě propojených vrstvách. Podobný disproporční efekt rotací a celotřídní karantény na snížení rozsahu epidemie dokumentují i další studie \cite{gemmetto2014mitigation, mcgee2021model}. 
 
-Zde uvedená opatření jsou jen úzkým výčtem všech opatření, která lze simulovat na realistické síti kontaktů. Výsledky uvedené výše jsou proto sice validní, nelze je však považovat za vyčerpávající. Širší záběr simulovaných opatření lze nalézt ve výchozí studii \cite{Brom2021.06.28.21259628}. Přesto i tyto demonstrativní výsledky dokládají užitečnost simulačních modelů pro odhadnutí efektu jednotlivých opatření tam, kde by to jiným způsobem bylo buď nemožné, či neetické \cite{squazzoni2020computational}. Model sám je vždy určitým zjednodušením modelovaného jevu, a je proto namístě uvažovat o~tom, jak je možné ho v~budoucnu rozšířit. Jedním potenciálním rozšířením takového modelu je simulace efektu vakcín se známou účinností pro učitele \cite{mcgee2021model} nebo využít dat o~síti kontaktů k~explicitnímu modelování dynamiky nejen šíření nákazy, ale i kontaktů samotných \cite{Rao_etal2021}.
+Zde uvedená opatření jsou jen úzkým výčtem všech opatření, která lze simulovat na realistické síti kontaktů. Výsledky uvedené výše jsou proto sice validní, nelze je však považovat za vyčerpávající. Širší záběr simulovaných opatření lze nalézt ve výchozí studii \cite{Brom2021.06.28.21259628}. Přesto i tyto demonstrativní výsledky dokládají užitečnost simulačních modelů pro odhadnutí efektu jednotlivých opatření tam, kde by to jiným způsobem bylo buď nemožné, či neetické \cite{squazzoni2020computational}. Model sám je vždy určitým zjednodušením modelovaného jevu, a je proto namístě uvažovat o~tom, jak je možné ho v~budoucnu rozšířit. Jedním potenciálním rozšířením takového modelu je simulace efektu vakcín se známou účinností pro učitele \cite{mcgee2021model} nebo využití dat o~síti kontaktů k~explicitnímu modelování dynamiky nejen šíření nákazy, ale i kontaktů samotných \cite{Rao_etal2021}.
 
 Rozšíření modelu, který je představen v~této kapitole, se však nemusí omezovat pouze na školní prostředí a nemusí se omezit pouze na covid-19. Za předpokladu dostupnosti dat o~relevantních kontaktech lze podobný přístup aplikovat pro simulování různých opatření i v~dalších prostředích, jakými jsou podniky, úřady nebo ústavy sociální péče. Podobně lze model adaptovat na další infekce za předpokladu, že jsou známy jejich virologické a infektologické vlastnosti. 
 
