--- a/prispevky/050-Grafy_kontaktu/main.tex
+++ b/prispevky/050-Grafy_kontaktu/main.tex
@@ -8,7 +8,7 @@
 
 Obvykle užívaný model epidemie SIR (Susceptibles, Infectives, Removed, tedy potenciálně vnímaví, infekční a vyčlenění ze struktury) obsahuje jako vstupní podmínky počty jedinců z~těchto skupin a predikuje přírůstky či úbytky v~každém časovém kroku. Epidemickými parametry jsou přitom hodnoty jako například míra infekčnosti, míra uzdravení atd., které určují intenzitu, se kterou dochází k~přechodům mezi stavy. Chování jednotlivců je u~tohoto modelu zahrnuto právě do intenzit těchto přechodů. Matematickým modelům epidemie se věnuje kapitola \ref{Typy_modelu}. Chceme-li modelovat šíření epidemie na úrovni jednotlivých kontaktů individuálně definovaných jedinců, je třeba vytvořit strukturu obsahující všechny jednotlivce a jejich vzájemné vazby. Tuto strukturu nazýváme graf kontaktů. V~grafu jsou jednotlivci reprezentováni jako uzly s~definovanými vlastnostmi, jejich kontakty pak představují hrany. Mezi významné atributy hran patří intenzita (počet kontaktů v~čase) a pra\-dě\-po\-dob\-nost přenosu nákazy při konkrétním setkání. 
 
-Graf kontaktů získáváme vlastním generátorem, vytvořeným pro softwarový ná\-stroj EPICITY, což je program umožňující testovat vliv protiepidemických opatření v~rám\-ci regionu. Rigorozně je náš postup popsán v publikaci \cite{M-techrep2021}.
+Graf kontaktů získáváme vlastním generátorem, vytvořeným pro softwarový ná\-stroj EPICITY, což je program umožňující testovat vliv protiepidemických opatření v~rám\-ci regionu. Rigorózně je náš postup popsán v publikaci \cite{M-techrep2021}.
 
 Výhodou použití grafu diskretizovaného na úroveň jednotlivců je proti SIR modelu především možnost modelovat průběh epidemie s~vysokou granularitou. Je možné sledovat rychlost šíření nákazy dle nejrůznějších kritérií, například z~hlediska geografie, podle věkových kohort, ekonomických aktivit atd.  Jiným možným příkladem je simulace výskytu superpřenašeče v~nějakém místě či v~určité komunitě, jehož simulace v~SIR modelu není možná.
 Graf kontaktů může být navržen jako vícevrstvá struktura, ve které jednotlivé vrstvy představují specifickou třídu kontaktů. 
@@ -16,9 +16,9 @@ Graf kontaktů může být navržen jako vícevrstvá struktura, ve které jedno
 
 Těchto vrstev získáváme přibližně třicet a odpovídají setkáním v~rodině, práci, škole, restauracích atd.
 
-Při tvorbě grafu vycházíme z~dat, která poskytují sociologické výzkumy \cite{paqcovid, zaj:mediancovid, zaj:medianlife}, Český statistický úřad\footnote{https://www.czso.cz}, Katastrální úřad\footnote{https://cuzk.cz} a openstreetmap\footnote{https://www.openstreetmap.org}. Velké množství anonymizovaných dat pro tvorbu grafu poskytla bezplatně společnost Seznam.cz, a.s., služba Firmy.cz\footnote{https://www.firmy.cz/}.
+Při tvorbě grafu vycházíme z~dat, která poskytují sociologické výzkumy \cite{paqcovid, zaj:mediancovid, zaj:medianlife}, Český statistický úřad,\footnote{https://www.czso.cz} Katastrální úřad,\footnote{https://cuzk.cz} a openstreetmap.\footnote{https://www.openstreetmap.org} Velké množství anonymizovaných dat pro tvorbu grafu poskytla bezplatně společnost Seznam.cz, a.s., služba Firmy.cz.\footnote{https://www.firmy.cz/}
 
-Tento článek se zabývá pouze tvorbou grafu kontaktů, tedy zdroje informací pro simulace, jimiž se podrobně zabývají kapitoly \ref{Agentni_modely}, v~nichž lze najít obecný popis modelu, a kapitoly \ref{Evaluace_politik} obsahující konkrétní příklady použití modelu pro srovnání různých experimentálních scénářů průběhu epidemie.
+Tento článek se zabývá pouze tvorbou grafu kontaktů, tedy zdroje informací pro simulace, jimiž se podrobně zabývají texty kapitoly \ref{Agentni_modely}, v~nichž lze najít obecný popis modelu, a kapitoly \ref{Evaluace_politik} obsahující konkrétní příklady použití modelu pro srovnání různých experimentálních scénářů průběhu epidemie.
 
 \section*{Konstrukce grafu kontaktů}
 
@@ -26,12 +26,12 @@ První námi konstruovaný graf vycházel z~geograficky definovaného středně 
 
 Základním zdrojem pro zjištění struktury obyvatelstva jsou data Českého statistického úřadu (ČSÚ) získaná při sčítání lidu v~roce 2011. Tato data obsahují informace o~věku, pohlaví, místě pobytu, typu domácnosti a počtu členů domácnosti. Dalším druhem dat, která v~tomto ohledu vstupují do modelu, jsou informace o~hustotě zalidnění, tedy geometrické souřadnice jednotlivých domů doplněné o~počty bytů. Jelikož data nejsou vzájemně provázána, nezbývá než přiřazovat bydliště jednotlivcům náhodně. Dostupná data rovněž nejsou personalizována. Z~tohoto faktu vyplývá nutnost rozdělit populaci do domácností tak, aby obsazenost jednotlivých bytů a domů odpovídala nejen počtu domácností, ale také věkové struktuře členů domácností podle sčítání lidu. Algoritmus rozdělování lidí do domácností respektuje jak věkovou skladbu, tak další skutečnosti, jako je například vícegenerační bydlení v~rodinných domech.
 
-Jednotlivci je v~grafu náhodně přisouzen druh ekonomické aktivity v~závislosti na věku a pohlaví tak, aby výsledný profil všech jednotlivců odpovídal agregovaným datům o~struktuře zaměstnanosti v~daném regionu. S~věkem souvisí i přiřazení jednotlivých osob do školní výuky, obdobně jako například přiřazení osob důchodového věku mezi osoby trávící většinu času v~domácnosti. Každá osoba je tedy definována svými sociologickými charakteristikami (věk, pohlaví, druh ekonomické aktivity atd.) a rozdělení těchto vlastností v~celé populaci odpovídá údajům ze sčítání lidu v~roce 2011. Pro ilustraci: v~grafu tak můžeme nalézt například třiačtyřicetiletého ekonomicky aktivního učitele, pracujícího v~místě bydliště, žijícího s~manželkou a třemi dětmi v~rodinném domě. Dotyčný má 12 přátel, se kterými se pravidelně potkává, většina z~nich je jeho věku, každý den cestuje hromadnou dopravou do zaměstnání a pravidelně navštěvuje rodiče v~blízké vesnici.
+Každému ednotlivci je v~grafu náhodně přisouzen druh ekonomické aktivity v~závislosti na věku a pohlaví tak, aby výsledný profil všech jednotlivců odpovídal agregovaným datům o~struktuře zaměstnanosti v~daném regionu. S~věkem souvisí i přiřazení jednotlivých osob do školní výuky, obdobně jako například přiřazení osob důchodového věku mezi osoby trávící většinu času v~domácnosti. Každá osoba je tedy definována svými sociologickými charakteristikami (věk, pohlaví, druh ekonomické aktivity atd.) a rozdělení těchto vlastností v~celé populaci odpovídá údajům ze sčítání lidu v~roce 2011. Pro ilustraci: v~grafu můžeme nalézt například třiačtyřicetiletého ekonomicky aktivního učitele, pracujícího v~místě bydliště, žijícího s~manželkou a třemi dětmi v~rodinném domě. Dotyčný má 12 přátel, se kterými se pravidelně potkává, většina z~nich je jeho věku, každý den cestuje hromadnou dopravou do zaměstnání a pravidelně navštěvuje rodiče v~blízké vesnici.
 
 Lidé navazují řadu kontaktů, ať již pravidelných a predikovatelných, anebo zcela náhodných v~čase i prostoru. 
 %Vědecké uchopení této skutečnosti, zvláště má-li být definována míra kontaktu, je z matematického pohledu velmi složité. Určení hodnoty pravděpodobnosti setkání dvou lidí je úkol, jehož řešení závisí na řadě parametrů, které jsou v mnoha případech těžko kvantifikovatelné.
 Některé kontakty lze odhadnout z~podstaty věci, například kontakty v~rámci rodiny a ve škole, kam musí chodit každé dítě školního věku. Ostatní se odhadují hůře, a proto používáme kontaktní matice dostupné v~literatuře \cite{Prem_etal2017}, ze sociologických výzkumů anebo expertních odhadů. 
-U~každého kontaktu je důležitá jeho intenzita. Obr.\ref{kategorie} ukazuje v~levém sloupci porovnání středních počtů kontaktů ve vrstvách, zatímco v~pravém sloupci jsou znázorněny pravděpodobnosti nakažení ve vrstvách tak, jak byly vypočítány během tvorby grafu kontaktů.
+U~každého kontaktu je důležitá jeho intenzita. Obr. \ref{kategorie} ukazuje v~levém sloupci porovnání středních počtů kontaktů ve vrstvách, zatímco v~pravém sloupci jsou znázorněny pravděpodobnosti nakažení ve vrstvách tak, jak byly vypočítány během tvorby grafu kontaktů.
 %Z dat a literatury, kterou máme k dispozici, je možné realisticky určit pouze některé druhy kontaktů, v našem modelu jsou to kontakty v rodinách a kontakty ve škole. Pro ostatní druhy kontaktů (zaměstnání, přátelské kontakty a specificky kontakty v restauracích) je třeba pracovat s odhady založenými na sociologických výzkumech. Z těch je zajisté možné získat informace o tom, jak často lidé z konkrétní věkové skupiny navštěvují restaurace, nebo jaké procento populace holduje tomu kterému sportu, ovšem relevantní informace o tom, jak intenzivní jsou například kontakty v případě tréninku házené ve srovnání s tréninkem kanoistů, již oporu v datech hledají těžko. Pokud je to možné, používáme tedy jako parametry dohledatelná a vědecky podložená data. V případě, že taková data k dispozici nejsou, používáme expertních odhadů, jako například při určování kapacit obchodů a množství návštěvníků obchodních center. Tímto způsobem můžeme například získat představu o vztahu mezi počtem kontaktů v určité skupině kontaktů a počtu nakažlivých osob v nich, jak je uvedeno na obr.\ref{kategorie}. 
 
 %Hodnoty vah pro množství infekčních osob byly získány Saatyho metodou, dotazníkovým šetřením mezi experty.
@@ -45,14 +45,14 @@ Pravděpodobnosti nakažení v~jednotlivých prostředích se přirozeně liší
     \label{kategorie}
 \end{figure}
 
-Jak již bylo naznačeno, kontakty rozdělujeme do následujících kategorií: kontakty v~rodině, kontakty ve škole, kontakty na pracovišti a kontakty při volnočasových aktivitách, mezi které patří například návštěvy restaurací nebo návštěvy v~jiných domácnostech, návštěvy divadel atd. Vlastní přístup ke tvorbě grafu kontaktů vy\-ža\-du\-je také doprava či setkávání během nakupování. Způsob tvorby vrstev grafu je podrobně popsán v~\cite{M-techrep2021}, kde jsou vysvětleny postupy vedoucí k~určení jednotlivých parametrů včetně odůvodnění. Dále popíšeme implementaci kontaktů ve vybraných vrstvách grafu kontaktů.
+Jak bylo již naznačeno, kontakty rozdělujeme do následujících kategorií: kontakty v~rodině, kontakty ve škole, kontakty na pracovišti a kontakty při volnočasových aktivitách, mezi které patří například návštěvy restaurací, návštěvy v~jiných domácnostech, nebo návštěvy divadel atd. Vlastní přístup ke tvorbě grafu kontaktů vy\-ža\-du\-je také doprava či setkávání během nakupování. Způsob tvorby vrstev grafu je podrobně popsán v~\cite{M-techrep2021}, kde jsou vysvětleny postupy vedoucí k~určení jednotlivých parametrů včetně odůvodnění. Dále popíšeme implementaci kontaktů ve vybraných vrstvách grafu kontaktů.
 
 Jak je uvedeno výše, pro tvorbu \emph{rodinných kontaktů} využíváme anonymizovaných dat ČSÚ, která umožňují modelovat jednotlivě každou domácnost. Předpokládáme, že se každý člen domácnosti setkává se všemi jejími ostatními členy. Dále se potkávají členové různých domácností v~rámci stejného bydliště (domu). Posledním zdrojem kontaktů v~rámci domácností jsou pak mezigenerační návštěvy.
-Každou osobu starší 50 let považujeme za potenciálního rodiče, který bude navštěvovat domácnosti svých dětí. Počet dětí získáváme z~cenzurovaného normálního rozdělení s~průměrem 1,92 a standardní odchylkou 0,7, kteréžto hodnoty odpovídají údajům z~výzkumu \cite{zaj:ess}.
+Každou osobu starší 50 let považujeme za potenciálního rodiče, který bude navštěvovat domácnosti svých dětí. Počet dětí získáváme z~cenzurovaného normálního rozdělení s~průměrem 1,92 a standardní odchylkou 0,7. Tyto hodnoty odpovídají údajům z~výzkumu \cite{zaj:ess}.
 
 Domácnost dětí je volena náhodně tak, aby alespoň jeden člen domácnosti byl ve věku rodičů (prarodičů) minus 20 let.
 
-Při těchto mezigeneračních návštěvách se předpokládá, že daný rodič se při návštěvě svých dětí setkává se všemi členy jejich domácnosti. Podobně také děti navštěvují své rodiče a při té příležitosti se mohou setkat se všemi členy domácnosti rodičů.
+Při těchto mezigeneračních návštěvách se předpokládá, že daný rodič se při návštěvě svých dětí setkává se všemi členy jejich domácností. Podobně také děti navštěvují své rodiče a při té příležitosti se mohou setkat se všemi členy domácnosti rodičů.
 
 Pravděpodobnosti jednotlivých typů kontaktů (v~rámci domácnosti, me\-zi\-ge\-ne\-rač\-ní) jsou během vytváření grafu automaticky optimalizovány tak, aby odpovídaly matici kontaktů pro rodinné prostředí tak, jak je uváděna v~práci \cite{Prem_etal2017}. Kritériem pro optimalizaci je 
 minimalizování vážené kvadratické vzdálenosti výsledné matice kontaktů a matice kontaktů pro domácnosti z~\cite{Prem_etal2017}.
@@ -83,7 +83,7 @@ Podobně jako u~rodinných kontaktů se pravděpodobnosti pro vygenerovaný graf
 
 
 
-Kontakty mezi přáteli jsou vytvořeny na základě sítě přátelských kontaktů, která je generována mimo vlastní graf kontaktů. Přátelská síť je tvořena všemi obyvateli regionu staršími 10 let, kontakty mladších dětí během volnočasových aktivit jsou uvažovány v rámci setkávání ve školách. Graf přátelské sítě je generován modifikovanou metodou Barabasi-Albert, která přidává osobám s~větším počtem přátelských kontaktů více nových kontaktů než těm, kteří mají kontaktů méně. Tak vzniká i poměrně malé množství lidí s~velkým množstvím přátelských kontaktů oproti běžnému průměru. V~případě, že díky velkému množství kontaktů způsobí jednotlivec nakažení velkého množství dalších lidí, hovoříme o~tzv. superpřenašeči, jehož vlivem může dojít k~významnému lokálnímu navýšení intenzity růstu epidemie. Díky charakteru našeho modelu mohou být do grafu kontaktů tito superpřenašeči zahrnuti a může být pozorován jejich vliv na průběh epidemie.
+Kontakty mezi přáteli jsou vytvořeny na základě sítě přátelských kontaktů, která je generována mimo vlastní graf kontaktů. Přátelská síť je tvořena všemi obyvateli regionu staršími 10 let, kontakty mladších dětí během volnočasových aktivit jsou uvažovány v rámci setkávání ve školách. Graf přátelské sítě je generován modifikovanou metodou Barabasi--Albert, která přidává osobám s~větším počtem přátelských kontaktů více nových kontaktů než těm, kteří mají kontaktů méně. Tak vzniká i poměrně malé množství lidí s~velkým množstvím přátelských kontaktů oproti běžnému průměru. V~případě, že díky velkému množství kontaktů způsobí jednotlivec nakažení velkého množství dalších lidí, hovoříme o~tzv. superpřenašeči, jehož vlivem může dojít k~významnému lokálnímu navýšení intenzity růstu epidemie. Díky charakteru našeho modelu mohou být do grafu kontaktů tito superpřenašeči zahrnuti a může být pozorován jejich vliv na průběh epidemie.
 Přátelské kontakty se dělí na: kontakty ve volném prostoru, návštěvy mezi přáteli v~domácnosti jednoho z~přátel a společné návštěvy restaurací. Výběr realizace kontaktu je dán parametry ze studie \cite{zaj:medianlife}.
 
 \emph{Přátelské kontakty ve volném prostoru} jsou z~epidemického pohledu nejméně významné, neboť při nich dochází k~šíření epidemie ve velmi malé míře a pouze mezi účastníky schůzky.
@@ -95,13 +95,13 @@ Pokud je věk obou přátel vyšší osmnácti let, může se jejich setkání r
 %Níže napsané přesunout do dopravy
 % V případě, že se přátelský kontakt odehrává v geograficky vzdálených lokalitách a je nutné využít nějaký druh dopravy, vzniká při tvorbě grafu rovněž požadavek, aby pro tento přátelský kontakt vznikla i dopravní cesta. 
 
-Při vytváření vrstvy \emph{kontaktů v~obchodech} vycházíme z~databáze obchodů poskytnuté serverem seznam.cz. Obchody klasifikujeme do tří kategorií podle velikosti -- malé obchody, samoobsluhy a super/hypermarkety. Každému obyvateli přiřazujeme jeden obchod jednak na základě preference kategorie, kde vycházíme z~výzkumu \cite{zaj:medianlife}, jednak geograficky -- podle blízkosti k~místu bydliště. V~každém obchodě se mohou vzájemně potkávat všichni nakupující a personál.
+Při vytváření vrstvy \emph{kontaktů v~obchodech} vycházíme z~databáze obchodů poskytnuté serverem Seznam.cz. Obchody klasifikujeme do tří kategorií podle velikosti -- malé obchody, samoobsluhy a super/hypermarkety. Každému obyvateli přiřazujeme jeden obchod jednak na základě preference kategorie, kde vycházíme z~výzkumu \cite{zaj:medianlife}, jednak geograficky -- podle vzdálenosti od místa bydliště. V~každém obchodě se mohou vzájemně potkávat všichni nakupující a personál.
 
 Do tvorby grafu jsou zahrnuty rovněž \emph{náhodné kontakty}, tedy takové, jejichž mechanismus vzniku je pro nás neznámý. Každému jednotlivci jsou tímto způsobem vygenerovány tři možné kontakty s~pravděpodobností setkání váženou podle věku. Střední počet těchto kontaktů byl nastaven tak, aby odpovídal sociologickému výz\-ku\-mu \cite{Prem_etal2017}. Do ostatních kontaktů jsou zařazena rovněž všechna setkání uskutečněna při nejrůznějších společenských aktivitách napříč věkovými kohortami.
 
 Pro správnou funkci modelu je nutné vytvořit \emph{Dopravní síť}. Jednotlivci potřebují cestovat do škol, za prací, za ostatními členy rodiny i na schůzky s~přáteli. Potřeba využít dopravní prostředek vzniká v~závislosti na odlehlosti míst, která jedinec navštěvuje. Pro pohyb může využít jak individuální dopravu, tak dopravu hromadnou s~uvažováním vzájemných kontaktů. 
 
-Reálná dopravní síť je neúplný graf spojující jednotlivá sídla. Cesta mezi sídly tedy může v~případě větší odlehlosti vést i přes několik dalších uzlů. Z~dostupných datových zdrojů je velice obtížné získat kompletní informaci o~struktuře dopravní sítě. Proto lze do modelu zadat konkrétní uživatelem definovaný graf dopravy (pokud jej uživatel má k~dispozici), anebo tento graf generovat automaticky, jako přiblížení realitě. Pro automaticky generovaný graf dopravní sítě používáme Delaunayovu triangulaci, která vytvoří strukturu bez nadbytečných spojení. Navíc jsou ještě odstraněny souběžné cesty. Ukázka algoritmu je znázorněna na
+Reálná dopravní síť je neúplný graf spojující jednotlivá sídla. Cesta mezi sídly tedy v~případě větší odlehlosti může vést i přes několik dalších uzlů. Z~dostupných datových zdrojů je velice obtížné získat kompletní informaci o~struktuře dopravní sítě. Proto lze do modelu zadat konkrétní uživatelem definovaný graf dopravy (pokud jej uživatel má k~dispozici), anebo tento graf generovat automaticky, jako přiblížení realitě. Pro automaticky generovaný graf dopravní sítě používáme Delaunayovu triangulaci, která vytvoří strukturu bez nadbytečných spojení. Navíc jsou ještě odstraněny souběžné cesty. Ukázka algoritmu je znázorněna na
 obr. \ref{dopravnisit}, kde je zobrazena automaticky generovaná síť pro Lounsko. Obdobně může být generována pro jakoukoli oblast v~ČR. 
 
 %Takto vygenerovaná dopravní síť je velmi blízká realitě. 
@@ -134,7 +134,7 @@ Pohyb osoby v~grafu je dán nejkratší cestou (Dijskrův algoritmus). Každá c
 
 Data použitá pro tvorbu jednotlivých vrstev grafu kontaktů pocházejí z~nejrůznějších zdrojů, což způsobuje rozdílnost jejich bohatosti i kvality. Kromě použití otevřených zdrojů, u~kterých je třeba počítat s~jejich neúplností danou ve většině případů komunitním vznikem (data získává komunita nadšenců a fanoušků dané problematiky podle svých možností) nebo lokálností, ze které plyne různorodost kvality dat z~geografického hlediska, existují i robustní datové zdroje umožňující získání kvalitních datových podkladů. Těmi jsou státem spravované databáze s~údaji o~obyvatelstvu, databáze geografických informačních systémů či data, která jsou soukromým vlastnictvím komerčních firem, například obchodních řetězců. Přístup k~takovým datům je omezen jednak prostřednictvím GDPR, jednak ochotou vlastníků taková data poskytnout a dále cenou, kterou svým datům přikládají v~případě, že s~jejich poskytnutím souhlasí. Vzhledem ke zjednodušením modelu oproti realitě nejsou explicitně uvedeny kontakty v~zájmových a sportovních klubech, setkávání pěveckých sborů a spolu s~nimi rovněž ostatní aktivity podobného druhu. Je zřejmé, že v případě potřeby získání podrobnějšího grafu kontaktů lze graf o~tyto zpřesňující druhy kontaktů doplnit.
 
-Výsledkem sloučení jednotlivých kontaktních vrstev je graf kontaktů. Z~výše uvedeného je zřejmé, že při jeho tvorbě máme k~dispozici velké množství stupňů volnosti, pro jejichž určení není často možné získat empirická data. Jak již z~textu vysvítá, důležitým zdrojem vědecky podložených informací je pro nás publikace \cite{Prem_etal2017}, která obsahuje referenční kontaktní matice pro různé typy kontaktů. Můžeme je tedy srovnávat s~kontaktními maticemi našeho modelu. Výsledek tohoto srovnání je vidět na obr. \ref{maticekontaktu}.
+Výsledkem sloučení jednotlivých kontaktních vrstev je graf kontaktů. Z~výše uvedeného je zřejmé, že při jeho tvorbě máme k~dispozici velké množství stupňů volnosti, pro jejichž určení není často možné získat empirická data. Jak z~textu vyplývá, důležitým zdrojem vědecky podložených informací je pro nás publikace \cite{Prem_etal2017}, která obsahuje referenční kontaktní matice pro různé typy kontaktů. Můžeme je tedy srovnávat s~kontaktními maticemi našeho modelu. Výsledek tohoto srovnání je vidět na obr. \ref{maticekontaktu}.
 
 \begin{figure}
 \begin{center}
